<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:title="@string/current_position_title"
        android:icon="@drawable/ic_place_24dp" />

    <item
        android:id="@+id/navigation_favourites"
        android:enabled="true"
        android:title="@string/favourite_title"
        android:icon="@drawable/ic_favorite_border_24dp" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_24dp" />
</menu>