<resources>
    <string name="app_name">Wetter App</string>

    <string name="current_position_title">Aktuelle Position</string>
    <string name="favourite_title">Favoriten</string>
    <string name="search_title">Suche</string>

    <string name="title">%1$s, %2$s</string>
    <string name="subtitle">%1$s Uhr, %2$s</string>
    <string name="slider_label">%1$s Uhr</string>
    <string name="temperature">%1$s°</string>
    <string name="feels_like">Gefühlte %1$s°</string>
    <string name="wind_speed">%1$s km/h Wind</string>
    <string name="visibility">%1$s km/h Wind</string>
    <string name="sunrise">Sonnenaufgang um %1$s Uhr</string>
    <string name="sunset">Sonnenuntergang um %1$s Uhr</string>
    <string name="humidity">%1$s Luftfeuchtigkeit</string>
    <string name="min_max_divider">/</string>
</resources>