<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favorite_border_24dp"
        android:title="TODO"
        app:showAsAction="ifRoom" />
</menu>